light-video2-aliyun_pconline/light-video2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-light-video-service
  namespace: pconline
spec:
  selector:
    app: nginx-light-video-deployment
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-light-video-deployment
  name: nginx-light-video-deployment
  namespace: pconline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-light-video-deployment
  template:
    metadata:
      labels:
        app: nginx-light-video-deployment
    spec:
      containers:
        - name: light-video2
          image: registry.cn-shenzhen.aliyuncs.com/3conline/light-video2:junjie
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - name: nginx
          image: "nginx:1.9.12"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: nginx-light-video
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: nginx-light-video-configmap
          name: nginx-light-video
